# lwm-micro-rust

./: .env  .env.example  .env.prod.template  COMPLETION_SUMMARY.md  Cargo.toml  Makefile  PROJECT_STATUS.md  README.md  docker-compose.gateway.yml  docker-compose.prod.yml  docker-compose.yml
.kiro/specs/linkwithmentor-platform/: design.md  requirements.md  tasks.md
coturn/: turnserver.conf
database/init/: 01-init.sql
k8s/: configmap.yaml  gateway.yaml  namespace.yaml  postgres.yaml  redis.yaml  secrets.yaml  services.yaml
monitoring/: alert_rules.yml  prometheus.yml
nginx/: nginx.conf
nginx/ssl/: generate-certs.sh
redis/: redis.conf
scripts/: backup.sh  build-images.sh  deploy.sh
services/analytics/: Cargo.toml  Dockerfile
services/analytics/src/: config.rs  dashboards.rs  handlers.rs  main.rs  metrics.rs  models.rs  reports.rs  routes.rs
services/chat/: Cargo.toml  Dockerfile
services/chat/src/: config.rs  connection_manager.rs  handlers.rs  main.rs  message_service.rs  pubsub.rs  routes.rs  websocket.rs
services/gateway/: Cargo.toml  Dockerfile
services/gateway/src/: auth.rs  config.rs  enhanced_proxy.rs  health.rs  load_balancer.rs  main.rs  middleware.rs  monitoring.rs  performance.rs  proxy.rs  router.rs  routes.rs  security.rs  service_registry.rs
services/meetings/: Cargo.toml  Dockerfile
services/meetings/src/: calendar.rs  collaboration.rs  config.rs  handlers.rs  main.rs  models.rs  notifications.rs  routes.rs  scheduling.rs  whiteboard.rs
services/notifications/: Cargo.toml  Dockerfile
services/notifications/src/: config.rs  delivery.rs  email.rs  handlers.rs  main.rs  models.rs  push.rs  routes.rs  scheduler.rs  sms.rs  templates.rs
services/payment/: Cargo.toml  Dockerfile
services/payment/src/: config.rs  encryption.rs  escrow.rs  handlers.rs  main.rs  models.rs  payouts.rs  routes.rs  subscriptions.rs  webhooks.rs
services/payment/src/gateways/: mod.rs  paypal.rs  razorpay.rs  stripe.rs  upi.rs
services/safety-moderation/: Cargo.toml  Dockerfile
services/safety-moderation/src/: config.rs  content_analyzer.rs  handlers.rs  image_analyzer.rs  main.rs  ml_models.rs  models.rs  moderation_engine.rs  reporting.rs  routes.rs
services/user-management/: Cargo.toml  Dockerfile
services/user-management/src/: config.rs  handlers.rs  main.rs  middleware.rs  models.rs  routes.rs  services.rs
services/user-management/tests/: integration_test.rs
services/video/: Cargo.toml  Dockerfile
services/video-lectures/: Cargo.toml  Dockerfile
services/video-lectures/src/: analytics.rs  config.rs  handlers.rs  main.rs  models.rs  processing.rs  routes.rs  storage.rs  streaming.rs  upload.rs
services/video/src/: call_manager.rs  config.rs  handlers.rs  main.rs  models.rs  routes.rs  signaling.rs  turn_client.rs  webrtc_handler.rs
shared/auth/: Cargo.toml
shared/auth/src/: jwt.rs  lib.rs  middleware.rs  password.rs
shared/common/: Cargo.toml
shared/common/src/: circuit_breaker.rs  config.rs  error.rs  lib.rs  redis.rs  redis_metrics.rs  saga.rs  types.rs
shared/common/tests/: redis_test.rs
shared/database/: Cargo.toml
shared/database/migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql  002_enhanced_chat.down.sql  002_enhanced_chat.up.sql  003_video_calls.down.sql  003_video_calls.up.sql  004_meetings_collaboration.down.sql  004_meetings_collaboration.up.sql  005_payment_system.down.sql  005_payment_system.up.sql  006_safety_moderation.down.sql  006_safety_moderation.up.sql  007_notification_system.down.sql  007_notification_system.up.sql  008_analytics_system.down.sql  008_analytics_system.up.sql  009_video_lectures.down.sql  009_video_lectures.up.sql
shared/database/src/: connection.rs  lib.rs  migrations.rs  models.rs
shared/database/tests/: integration_test.rs
tools/db-cli/: Cargo.toml
tools/db-cli/src/: main.rs
tools/redis-cli/: Cargo.toml
tools/redis-cli/src/: main.rs
