[package]
name = "linkwithmentor-chat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chat"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
linkwithmentor-common = { path = "../../shared/common" }
linkwithmentor-database = { path = "../../shared/database" }
linkwithmentor-auth = { path = "../../shared/auth" }

# Core async and web framework
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database
sqlx = { workspace = true }
redis = { workspace = true }

# Authentication and security
jsonwebtoken = { workspace = true }
uuid = { workspace = true }

# Time and configuration
chrono = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }

# Logging and error handling
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# WebSocket support
tokio-tungstenite = { workspace = true }
futures-util = "0.3"

# Additional dependencies
dashmap = "5.5"
tokio-stream = "0.1"

[dev-dependencies]
tokio-test = "0.4"