[package]
name = "linkwithmentor-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gateway"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
linkwithmentor-common = { path = "../../shared/common" }
linkwithmentor-auth = { path = "../../shared/auth" }

# Core async and web framework
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Authentication and security
jsonwebtoken = { workspace = true }
uuid = { workspace = true }

# Time and configuration
chrono = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }

# Logging and error handling
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# HTTP client for service communication
reqwest = { workspace = true }

# Redis for caching and rate limiting
redis = { workspace = true }

# Additional dependencies for gateway functionality
http = "1.0"
http-body-util = "0.1"
futures = "0.3"
async-trait = "0.1"
sha2 = "0.10"
base64 = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"