[package]
name = "linkwithmentor-video"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "video"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
linkwithmentor-common = { path = "../../shared/common" }
linkwithmentor-database = { path = "../../shared/database" }
linkwithmentor-auth = { path = "../../shared/auth" }

# Core async and web framework
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database and Redis
sqlx = { workspace = true }
redis = { workspace = true }

# Authentication and security
jsonwebtoken = { workspace = true }
uuid = { workspace = true }

# Time and configuration
chrono = { workspace = true }
config = { workspace = true }
dotenvy = { workspace = true }

# Logging and error handling
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# WebSocket and WebRTC support
tokio-tungstenite = { workspace = true }
futures = { workspace = true }
dashmap = { workspace = true }
tokio-stream = { workspace = true }

# Additional dependencies for video service
base64 = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"