[package]
name = "linkwithmentor-auth"
version = "0.1.0"
edition = "2021"

[dependencies]
linkwithmentor-common = { path = "../common" }
jsonwebtoken = { workspace = true }
bcrypt = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }