[package]
name = "linkwithmentor-redis-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "redis-cli"
path = "src/main.rs"

[dependencies]
linkwithmentor-common = { path = "../../shared/common" }
tokio = { workspace = true }
redis = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }